--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,13 @@ packages = [{include = "posterize", from = "src"}]
 python = "^3.9"
 svg-ultralight = "^0.19.0"
 basic-colormath = "^0.1.0"
+numpy = "^1.25.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
 conventional-with-data = "^0.1.1"
 pytest = "^7.4.0"
+types-lxml = "^2023.3.28"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
@@ -33,7 +35,7 @@ build-backend = "poetry.core.masonry.api"
 include = ["src"]
 exclude = ["**/__pycache__.py"]
 
-pythonVersion = "3.10"
+pythonVersion = "3.9"
 pythonPlatform = "Any"
 
 typeCheckingMode = "strict"
