--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 svg-ultralight = "^0.19.0"
 basic-colormath = "^0.1.0"
 numpy = "^1.25.0"
+stacked-quantile = "^0.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
