--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ svg-ultralight = "^0.19.0"
 basic-colormath = "^0.1.0"
 numpy = "^1.25.0"
 stacked-quantile = "^0.3.0"
+paragraphs = "^0.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
