build: use setuptools

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,12 @@
 ci:
-  skip: [poetry-lock,pyright]
+  skip: [pyright]
 
 exclude: "tests"
 
 repos:
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.4.0
+  rev: v4.6.0
   hooks:
     - id: check-added-large-files
     - id: check-ast
@@ -25,7 +25,7 @@ repos:
     - id: check-yaml
     - id: debug-statements
     - id: destroyed-symlinks
-    - id: detect-aws-credentials
+    # - id: detect-aws-credentials
     - id: detect-private-key
     - id: end-of-file-fixer
     - id: mixed-line-ending
@@ -39,26 +39,17 @@ repos:
       - --pytest-test-first
     - id: no-commit-to-branch
     - id: pretty-format-json
+      args: ['--autofix']
     # - id: sort-simple-yaml
         # files: .pre-commit-config.yaml
 
-- repo: https://github.com/python-poetry/poetry
-  rev: 1.3.0
-  hooks:
-    - id: poetry-check
-    - id: poetry-lock
-    # - id: poetry-export
-    #   args:
-    #   - -f requirements.txt
-    #   - -o requirements.txt
-
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.991
+  rev: v1.10.0
   hooks:
   - id: mypy
     name: mypy
     language: python
-    language_version: python 3.11
+    language_version: python 3.12
     types: [python]
     require_serial: true
     verbose: true
@@ -69,27 +60,27 @@ repos:
     # files: ^(src/|tests/)
 
 - repo: https://github.com/PyCQA/isort
-  rev: 5.12.0
+  rev: 5.13.2
   hooks:
   - id: isort
-    args: ["--profile", "black", "--filter-files", "--combine-as"]
+    args: ["--profile", "black", "--filter-files", "--combine-as", "honor--noqa"]
 
 - repo: https://github.com/psf/black
-  rev: 22.12.0
+  rev: 24.4.2
   hooks:
   - id: black
     language_version: python3.10
     args: ["--skip-magic-trailing-comma"]
 
 - repo: https://github.com/asottile/pyupgrade
-  rev: v3.3.1
+  rev: v3.15.2
   hooks:
   - args:
     - --py310-plus
     id: pyupgrade
 
 - repo: https://github.com/Lucas-C/pre-commit-hooks
-  rev: v1.4.2
+  rev: v1.5.5
   hooks:
   - id: remove-tabs
 
@@ -98,53 +89,52 @@ repos:
 #   hooks:
 #   - id: commitizen
 
-- repo: https://github.com/pre-commit/mirrors-pylint
-  rev: v3.0.0a5
-  hooks:
-  - id: pylint
-    exclude: "tests"
-    name: pylint
-    args:
-    - --good-names=i,j,_,f,r,g,b,q1,q4
-    - --disable=protected-access
-    - --disable=no-member
-    - --disable=import-error
-    - --disable=no-name-in-module
-    - --load-plugins=pylint.extensions.docparams
-    - --accept-no-param-doc=n
-    - --accept-no-raise-doc=n
-    - --accept-no-return-doc=n
-    - --accept-no-yields-doc=n
+# pylint still broken in python 3.12
+# - repo: https://github.com/pre-commit/mirrors-pylint
+#   rev: v3.0.0a5
+#   hooks:
+#   - id: pylint
+#     exclude: "tests"
+#     name: pylint
+#     args:
+#     - --good-names=i,j,_,f
+#     - --disable=protected-access
+#     - --disable=no-member
+#     - --disable=import-error
+#     - --disable=no-name-in-module
+#     - --load-plugins=pylint.extensions.docparams
+#     - --accept-no-param-doc=n
+#     - --accept-no-raise-doc=n
+#     - --accept-no-return-doc=n
+#     - --accept-no-yields-doc=n
 
 - repo: https://github.com/charliermarsh/ruff-pre-commit
   # ignores
-  # ANN101 Missing type annotation for self in method
-  # ANN102 Missing type annotation for cls in classmethod
-  # ANN201 Missing return type annotation for public function
-  # ANN202 Missing return type annotation for private function (wants -> None everywhere)
-  # B905 zip() without an explicit strict= parameter
-  # COM812 Trailing comma missing
-  # D203 1 blank line required before class docstring
-  # D213 multi line summary second line
-  # I001 Inport block is un-sorted or un-formatted
+  # COM812 Trailing comma missing (does not agree with Black)
+  # D203 1 blank line required before class docstring (incompatible with D211)
+  # D213 multi line summary second line (incompatible with D212):
   # ISC003 Explicitly concatenated string should be implicitly concatenated
-  # N802 Function name should be lowercase
-  # N806 Variable in function should be lowercase
-  # PGH003 Use specific rule codes when ignoring type issues
-  # PLR0913 Too many arguments to function call
-  # PTH108 os.unlink should be replaced by .unlink()
-  rev: 'v0.0.238'
+  # ANN101 Missing type annotation for self in method
+  # I001: Import block is un-sorted or un-formatted (disagrees with isort)
+  #
+  # ERA001: Found commented out code
+  # PGH003: Use specific rule codes instead of generic ones
+  # S603: subprocess call - check for execution of untrusted input
+  # S320: Using lxml to parse untrusted data
+  # PLR0913: too many arguments for function
+  # PYI034: __enter__ methods usually return 'self'
+  rev: 'v0.4.3'
   hooks:
     - id: ruff
       exclude: "tests"
       args:
-      - --select=ALL
-      - --ignore=ANN101,ANN102,ANN201,ANN202,B905,COM812,D203,D213,I001,ISC003,N802,N806,PGH003,PLR0913,PTH108
       - --target-version=py310
+      - --select=ALL
+      - --ignore=COM812,D203,D213,ISC003,ANN101,ERA001,PGH003,S603,S320,PLR0913,PYI034,I001
       # - --fix
 
 # reads pyproject.toml for additional config
 - repo: https://github.com/RobertCraigie/pyright-python
-  rev: v1.1.291
+  rev: v1.1.362
   hooks:
     - id: pyright
