--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,15 @@ authors = [{ name = "Shay Hill", email = "shay_public@hotmail.com" }]
 license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = ["cluster-colors", "svg-ultralight", "basic-colormath", "numpy", "stacked-quantile", "paragraphs"]
+dependencies = [
+    "basic-colormath",
+    "cluster-colors",
+    "numpy",
+    "paragraphs"
+    "stacked-quantile",
+    "svg-ultralight",
+    "svgcairo",
+]
 
 [project.optional-dependencies]
 dev = ["conventional-with-data", "pre-commit", "pytest", "tox", "types-lxml", "types-pillow"]
