refactor: rasterize with cairo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "paragraphs",
     "stacked-quantile",
     "svg-ultralight",
-    "svgcairo"
+    "cairosvg"
 ]
 
 [project.optional-dependencies]
