--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "basic-colormath",
-    "cluster-colors",
+    "cluster-colors>=2.3",
     "numpy",
     "paragraphs",
     "stacked-quantile",
