build: spec minimum version for some deps
Require cluster_colors >=2.4 for optimized median cut. Require
basic_colormat >=0.4 for vectorized matrix operations.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "basic-colormath",
-    "cluster-colors>=2.3",
+    "basic-colormath>=0.4",
+    "cluster-colors>=2.4",
     "numpy",
     "paragraphs",
     "stacked-quantile",
