--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,21 +43,21 @@ repos:
     # - id: sort-simple-yaml
         # files: .pre-commit-config.yaml
 
-- repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.11.2
-  hooks:
-  - id: mypy
-    name: mypy
-    language: python
-    language_version: python 3.12
-    types: [python]
-    require_serial: true
-    verbose: true
-    additional_dependencies: ['types-requests']
-    # exclude: "tests"
-    # args:
-    # - --ignore-missing-imports
-    # files: ^(src/|tests/)
+# - repo: https://github.com/pre-commit/mirrors-mypy
+#   rev: v1.11.2
+#   hooks:
+#   - id: mypy
+#     name: mypy
+#     language: python
+#     language_version: python 3.12
+#     types: [python]
+#     require_serial: true
+#     verbose: true
+#     additional_dependencies: ['types-requests']
+#     # exclude: "tests"
+#     # args:
+#     # - --ignore-missing-imports
+#     # files: ^(src/|tests/)
 
 - repo: https://github.com/PyCQA/isort
   rev: 5.13.2
