--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,14 +24,14 @@ dev = [
 requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+package-dir = {"" = "src"}
+
 [tool.setuptools.packages.find]
 where = ["src"]
 
-[tool.setuptools]
-include-package-data = true
-
 [tool.setuptools.package-data]
-poeterize = ["binaries/potrace"]
+poeterize = ["bin/potrace.exe"]
 
 [tool.commitizen]
 name = "cz_conventional_commits"
