--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ exclude: "tests"
 repos:
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v5.0.0
+  rev: v6.0.0
   hooks:
     - id: check-added-large-files
     - id: check-ast
@@ -31,9 +31,6 @@ repos:
     - id: mixed-line-ending
     - id: requirements-txt-fixer
     - id: trailing-whitespace
-    - id: fix-encoding-pragma
-      args:
-      - --remove
     - id: name-tests-test
       args:
       - --pytest-test-first
@@ -43,37 +40,24 @@ repos:
     # - id: sort-simple-yaml
         # files: .pre-commit-config.yaml
 
-# - repo: https://github.com/pre-commit/mirrors-mypy
-#   rev: v1.11.2
-#   hooks:
-#   - id: mypy
-#     name: mypy
-#     language: python
-#     language_version: python 3.12
-#     types: [python]
-#     require_serial: true
-#     verbose: true
-#     additional_dependencies: ['types-requests']
-#     # exclude: "tests"
-#     # args:
-#     # - --ignore-missing-imports
-#     # files: ^(src/|tests/)
-
-- repo: https://github.com/PyCQA/isort
-  rev: 6.0.1
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v1.18.2
   hooks:
-  - id: isort
-    args: ["--profile", "black", "--filter-files", "--combine-as", "honor--noqa"]
-
-- repo: https://github.com/psf/black
-  rev: 25.1.0
-  hooks:
-  - id: black
-    language_version: python3.10
-    args: ["--skip-magic-trailing-comma"]
+  - id: mypy
+    name: mypy
+    language: python
+    language_version: python 3.10
+    types: [python]
+    require_serial: true
+    verbose: true
+    additional_dependencies: ['types-requests']
+    # exclude: "tests"
+    # args:
+    # - --ignore-missing-imports
+    # files: ^(src/|tests/)
 
 - repo: https://github.com/asottile/pyupgrade
-  rev: v3.20.0
+  rev: v3.21.1
   hooks:
   - args:
     - --py310-plus
@@ -89,19 +73,31 @@ repos:
 #   hooks:
 #   - id: commitizen
 
-# pylint still broken in python 3.12
-# - repo: https://github.com/pre-commit/mirrors-pylint
-#   rev: v3.0.0a5
+# # This will only work with pylint installed in the venv
+# - repo: local
 #   hooks:
 #   - id: pylint
 #     exclude: "tests"
 #     name: pylint
+#     entry: ./.venv/Scripts/pylint.exe
+#     language: system
+#     types: [python]
 #     args:
+#     - --ignore-patterns=.venv
 #     - --good-names=i,j,_,f
-#     - --disable=protected-access
-#     - --disable=no-member
-#     - --disable=import-error
-#     - --disable=no-name-in-module
+#     # - --disable=protected-access
+#     # - --disable=no-member
+#     # - --disable=import-error
+#     # - --disable=no-name-in-module
+#     - --disable=redundant-returns-doc # many false positives
+#     - --disable=too-many-arguments
+#     - --disable=too-many-instance-attributes
+#     - --disable=redefined-builtin # sticking with edge.next
+#     - --disable=invalid-name # for _TMeshElem and similar type hints
+#     - --disable=useless-return # conflicts with mypy
+#     - --disable=assignment-from-no-return # prevents overloading Attrib methods to only raise an Exception
+#     - --disable=useless-parent-delegation
+#     - --disable=R0801 # Similar lines in multiple files
 #     - --load-plugins=pylint.extensions.docparams
 #     - --accept-no-param-doc=n
 #     - --accept-no-raise-doc=n
@@ -114,26 +110,31 @@ repos:
   # D203 1 blank line required before class docstring (incompatible with D211)
   # D213 multi line summary second line (incompatible with D212):
   # ISC003 Explicitly concatenated string should be implicitly concatenated
-  # I001: Import block is un-sorted or un-formatted (disagrees with isort)
-  #
+  # FLY Use f-string instead of ...
+  # S311 Standard pseudo-random generators are not suitable for security/cryptographic purposes
+  rev: 'v0.14.5'
   # ERA001: Found commented out code
   # PGH003: Use specific rule codes instead of generic ones
   # S603: subprocess call - check for execution of untrusted input
   # PLR0913: too many arguments for function
   # PYI034: __enter__ methods usually return 'self'
   # PLR2004: magic value used in expression
-  rev: 'v0.12.0'
   hooks:
     - id: ruff
       exclude: "tests"
       args:
       - --target-version=py310
       - --select=ALL
-      - --ignore=COM812,D203,D213,ISC003,ERA001,PGH003,S603,PLR0913,PYI034,I001,PLR2004
-      # - --fix
+      - --ignore=COM812,D203,D213,ISC003,FLY,S311,ERA001,PGH003,S603,PLR0913,PYI034,PLR2004
+      - --fix
+      - --fixable=RUF022
+    - id: ruff
+      args: ["check", "--select", "I", "--fix"]
+    - id: ruff-format
+      name: "ruff-format"
 
 # reads pyproject.toml for additional config
 - repo: https://github.com/RobertCraigie/pyright-python
-  rev: v1.1.402
+  rev: v1.1.407
   hooks:
     - id: pyright
