feat: chaucer images for OT project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 ]
 requires-python = ">=3.10"
 dependencies = [
+  "basic-colormath>=1.1.1",
   "cluster-colors>=0.13",
   "numpy",
   "svg-ultralight",
