--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,15 +40,37 @@ version_files = ["pyproject.toml:^version"]
 [tool.isort]
 profile = "black"
 
-
 [tool.pytest.ini_options]
 addopts = "--doctest-modules"
-pythonpath = ["tests"]
-log_cli = 1
+pythonpath = "tests"
+log_cli = true
 
 
 [tool.ruff.lint.pydocstyle]
 convention = "pep257"
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*.py" = [
+    "S101",
+    "D",
+    "F401",
+] # Ignore assertions, docstrings, unused imports in test files
+
+[tool.ruff.format]
+docstring-code-line-length = 88
+
+[tool.ruff.lint]
+
+select = ["ALL"]
+
+ignore = [
+    "PLR",  # magic values
+    "COM",  # trailing commas
+    "ANN",  # forbid Any
+    "S",    # warnings about pickle, random, etc.
+    "N",    # names
+    "B019", # memory leak warning for lru_cache
+]
 
 
 [tool.pyright]
@@ -56,13 +78,11 @@ include = ["src"]
 exclude = ["**/__pycache__.py"]
 
 pythonVersion = "3.10"
-pythonPlatform = "Any"
+pythonPlatform = "All"
 
 typeCheckingMode = "strict"
-reportShadowedImports = true
 reportCallInDefaultInitializer = true
 reportImplicitStringConcatenation = true
-# reportMissingSuperCall = true
 reportPropertyTypeMismatch = true
 reportUninitializedInstanceVariable = true
 reportUnnecessaryTypeIgnoreComment = true
