--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.10"
 dependencies = [
   "basic-colormath>=1.1.1",
   "cluster-colors>=0.13",
+  "diskcache>=5.6.3",
   "numpy",
   "svg-ultralight",
 ]
